--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </header>
     <main>
       <section class="services">
-        <span class="work">We work with</span>
-        <h2 class="amazing">Amazing Services</h2>
+        <h2 class="amazing">
+          <span class="work">We work with</span> Amazing Services
+        </h2>
         <ul class="services-list">
           <li class="services-item">
             <img class="image" src="images/photodiary.png" alt="" />
@@ -103,8 +104,9 @@
       </section>
       <section class="team-wrapper">
         <div class="container team">
-          <span class="team-span">Who we are</span>
-          <h2 class="team-title">Meet our team</h2>
+          <h2 class="team-title">
+            <span class="team-span">Who we are</span> Meet our team
+          </h2>
           <p class="team-text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab,
             aliquam cupiditate deserunt dolores ducimus expedita explicabo id
@@ -123,40 +125,16 @@
                   <div class="overlay">
                     <ul class="list">
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/facebook.png"
-                            alt="facebook"
-                            class="icon icon-facebook"
-                          />
-                        </a>
+                        <a href="#" class="list-link facebook"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/twitter.png"
-                            alt="twitter"
-                            class="icon icon-twitter"
-                          />
-                        </a>
+                        <a href="#" class="list-link twitter"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/pinterest.png"
-                            alt="pinterest"
-                            class="icon icon-pinterest"
-                          />
-                        </a>
+                        <a href="#" class="list-link pinterest"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/instagram.png"
-                            alt="instagram"
-                            class="icon icon-instagram"
-                          />
-                        </a>
+                        <a href="#" class="list-link instagram"> </a>
                       </li>
                     </ul>
                   </div>
@@ -178,40 +156,16 @@
                   <div class="overlay">
                     <ul class="list">
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/facebook.png"
-                            alt="facebook"
-                            class="icon icon-facebook"
-                          />
-                        </a>
+                        <a href="#" class="list-link facebook"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/twitter.png"
-                            alt="twitter"
-                            class="icon icon-twitter"
-                          />
-                        </a>
+                        <a href="#" class="list-link twitter"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/pinterest.png"
-                            alt="pinterest"
-                            class="icon icon-pinterest"
-                          />
-                        </a>
+                        <a href="#" class="list-link pinterest"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/instagram.png"
-                            alt="instagram"
-                            class="icon icon-instagram"
-                          />
-                        </a>
+                        <a href="#" class="list-link instagram"> </a>
                       </li>
                     </ul>
                   </div>
@@ -233,40 +187,16 @@
                   <div class="overlay">
                     <ul class="list">
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/facebook.png"
-                            alt="facebook"
-                            class="icon icon-facebook"
-                          />
-                        </a>
+                        <a href="#" class="list-link facebook"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/twitter.png"
-                            alt="twitter"
-                            class="icon icon-twitter"
-                          />
-                        </a>
+                        <a href="#" class="list-link twitter"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/pinterest.png"
-                            alt="pinterest"
-                            class="icon icon-pinterest"
-                          />
-                        </a>
+                        <a href="#" class="list-link pinterest"> </a>
                       </li>
                       <li class="list-item">
-                        <a href="#" class="list-link">
-                          <img
-                            src="images/instagram.png"
-                            alt="instagram"
-                            class="icon icon-instagram"
-                          />
-                        </a>
+                        <a href="#" class="list-link instagram"> </a>
                       </li>
                     </ul>
                   </div>
